@@ -63,6 +63,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
+                   <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                    <parameters>true</parameters>
                     <release>14</release>
                 </configuration>
             </plugin>
